--- a/kontakt.html
+++ b/kontakt.html
@@ -158,7 +158,7 @@
         <div class="container">
             <h1>Kontaktirajte nas</h1>
             <!-- Forma za kontakt -->
-            <form action="petricdanijel.1471997@gmail.com" method="post" enctype="text/plain">
+            <form action="mailto: petricdanijel.1471997@gmail.com" method="post" enctype="text/plain">
                 <label for="ime">Ime:</label>
                 <input type="text" id="ime" name="ime" required>
                 
