--- a/o meni.html
+++ b/o meni.html
@@ -8,33 +8,57 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Dokdo&display=swap" rel="stylesheet">
     <style>
-        nav a.active {
-            width:auto;
-            background-color: #787070;
-            color: rgb(255, 255, 255);
-        }
-        
+         body {
+            
+            background-image: url('slike/djbg.jpg');
+    background-repeat: repeat;
+    background-position: center top; /* Postavite početnu poziciju slike pozadine na sredinu gore */
+    margin: 0;
+    padding: 0;
+         }
+
         nav {
-            display: flex;
-            align-items:center;
-            background-color: #000000; 
-            height: 100px; 
-        }
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #000000; 
+    height: 100px; 
+    max-width: 100%; 
+    margin: 0 auto; 
+    padding: 0 20px;
+}
 
-        .logo {
-            height: 100px;
-            padding-left: 20px;
-            margin-right: auto;
-            overflow: hidden;
-        }
+.logo {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 20px;
-            margin: 0 10px;
-            flex-grow: 1;
-        }
+.logo img {
+    height: 100px;
+    padding-left: 20px;
+}
+
+.meni {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1; /* Da bi zauzimalo preostali prostor */
+}
+
+.meni a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 20px; 
+    margin: 0 10px;
+}
+
+.meni a:last-child {
+    margin-right: 0; 
+}
+
 
         nav a:hover {
             background-color: #ddd;
@@ -52,7 +76,7 @@
 
         main {
             font-family: 'Protest Guerrilla', cursive;    
-            color: #ffffff;    
+            color: #3e4f6e;    
             max-width: 100%;
             object-position:center;
             padding: 0px;
@@ -93,6 +117,8 @@
             margin: auto;
             margin-bottom: 30px;
             text-align: justify;
+            -webkit-text-stroke-width: 1px; /* Debljina ruba */
+    -webkit-text-stroke-color: rgb(255, 255, 255); /* Boja ruba */
         }
 
         .profilna_slika {
@@ -115,11 +141,16 @@
 </head>
 <body>
     <nav>
-        <img src="slike/logo.png" alt="Logo" class="logo">
-        <a href="dj daniel petric.html">POČETNA</a>
-        <a href="o meni.html" class="active">O MENI</a>
-        <a href="usluge.html">USLUGE</a>
-        <a href="kontakt.html">KONTAKT</a>
+        <div class="logo">
+            <img src="slike/logo.png" alt="Logo">
+    </div>
+
+    <div class="meni">
+            <a href="dj daniel petric.html">POČETNA</a>
+            <a href="o meni.html">O MENI</a>
+            <a href="usluge.html">USLUGE</a>
+            <a href="kontakt.html" class="active">KONTAKT</a>
+        </div>
     </nav>
 
     <main> 
@@ -141,7 +172,7 @@
 
         <div class="tekst_o_meni">
             <p>Svojim open format pristupom, Danijel pokriva sve žanrove internacionalne glazbe i domaćeg balkanskog zvuka.
-            Profesionalizam u rukovanju opremom, prilagodljivost i kreativnost u miksanju čine ga traženim DJ-em za različite vrste događanja.</p>
+            Profesionalizam u rukovanju opremom, prilagodljivost i kreativnost u miksanju čine ga traženim DJ-em za različite vrste događanja.</p> <br>
         </div>
     </main>
 
