--- a/usluge.html
+++ b/usluge.html
@@ -10,33 +10,58 @@
 </head>
 
 <style>
-    nav a.active {
-        width:auto;
-        background-color: #787070;
-        color: #ffffff;
-    }
+   
+   body {
+            background-color: #dddddd;
+            background-size: cover;
+            margin: 0;
+            padding: 0;
+        }
 
-    nav {
-        display: flex;
-        align-items:center;
-        background-color: #000000; 
-        height: 100px; 
-    }
+        nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #000000; 
+    height: 100px; 
+    max-width: 100%; 
+    margin: 0 auto; 
+    padding: 0 20px;
+}
 
-    .logo {
-        height: 100px;
-        padding-left: 20px;
-        margin-right: auto;
-        overflow: hidden;
-    }
+.logo {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
 
-    nav a {
-        color: #ffffff;
-        text-decoration: none;
-        padding: 20px;
-        margin: 0 10px;
-        flex-grow: 1;
-    }
+.logo img {
+    height: 100px;
+    padding-left: 20px;
+}
+
+.meni {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1; /* Da bi zauzimalo preostali prostor */
+}
+
+.meni a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 20px; 
+    margin: 0 10px;
+}
+
+.meni a:last-child {
+    margin-right: 0; 
+}
+
+
+
 
     nav a:hover {
         background-color: #dddddd;
@@ -61,7 +86,7 @@
     }
 
     body {
-        background-image: url('slike/djbg.jpg');
+        background-color: #dddddd;
         background-size: cover;
         margin: 0;
     }
@@ -91,7 +116,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: 30px;
-        margin-bottom: 30px; /* Prilagodite po potrebi */
+        margin-bottom: 30px; 
         margin-left: 30px ;
         margin-right: 30px;
     }
@@ -99,11 +124,11 @@
     .slika_i_naslov {
         position:relative;
         text-align: center;
-        width: 30%; /* Tri slike u redu */
-        border: 2px solid #cccccc; /* Dodajte okvir */
-        border-radius: 20px; /* Dodajte zaobljeni rub */
-        overflow: hidden; /* Osigurava da slika ne izlazi iz okvira */
-        margin-bottom: 20px; /* Prilagodite po potrebi */
+        width: 30%; 
+        border: 4px solid #000000; 
+        border-radius: 20px; 
+        overflow: hidden; 
+        margin-bottom: 20px; 
     }
 
     .slika_i_naslov img {
@@ -113,16 +138,19 @@
     }
 
     .slika_i_naslov h2 {
-        font-size: 24px; /* Prilagodite po potrebi */
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 24px; 
         font-weight: bolder ;
         margin: 0;
-        color: #ffffff; /* Prilagodite po potrebi */
+        color: #ffffff; 
         opacity: 0;
         position: absolute;
         bottom: 10px;
         left: 50%;
         transform: translateX(-50%);
         transition: opacity 0.3s ease;
+        -webkit-text-stroke-width: 1px; /* Debljina ruba */
+    -webkit-text-stroke-color: rgb(0, 0, 0); /* Boja ruba */
     }
 
     .slika_i_naslov:hover h2 {
@@ -132,11 +160,16 @@
 
 <body>
     <nav>
-        <img src="slike/logo.png" alt="Logo" class="logo">
-        <a href="dj daniel petric.html">POČETNA</a>
-        <a href="o meni.html">O MENI</a>
-        <a href="usluge.html" class="active">USLUGE</a>
-        <a href="kontakt.html">KONTAKT</a>
+        <div class="logo">
+                <img src="slike/logo.png" alt="Logo">
+        </div>
+
+        <div class="meni">
+                <a href="dj daniel petric.html">POČETNA</a>
+                <a href="o meni.html">O MENI</a>
+                <a href="usluge.html">USLUGE</a>
+                <a href="kontakt.html" class="active">KONTAKT</a>
+            </div>
     </nav>
 
     <main> 
@@ -165,7 +198,7 @@
                 <h2>Momačka</h2>
             </div>
             <div class="slika_i_naslov">
-                <img src="slike/djevojačka.jpg" alt="Slika 3">
+                <img src="slike/djevojačka.jpg" alt="djevojačka">
                 <h2>Djevojačka</h2>
             </div>
         </div>
@@ -176,8 +209,8 @@
                 <h2>Obljetnica</h2>
             </div>
             <div class="slika_i_naslov">
-                <img src="slike/otvorenje.jpg" alt="Slika 2">
-                <h2>Otvorenje</h2>
+                <img src="slike/otvorenje.jpg" alt="otvorenje">
+                <h2>Razna otvorenja</h2>
             </div>
             <div class="slika_i_naslov">
                 <img src="slike/najam opreme.jpg" alt="najam opreme">
@@ -193,6 +226,13 @@
         </div>
     </footer>
 
-    <script src="datum_i_sat.js"></script>
+    <div class="datum_i_sat">
+        <p id="datum_i_sat"></p>
+    </div>
+</footer>
+
+
+<script src="JavaScript/datum_i_sat.js"></script>
+
 </body>
 </html>
