--- a/usluge.html
+++ b/usluge.html
@@ -7,169 +7,168 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Dokdo&display=swap" rel="stylesheet">
-</head>
 
-<style>
-   
-   body {
-            background-color: #dddddd;
+    <style>
+        
+        body {
+            background-color: #F5F5F5;
             background-size: cover;
             margin: 0;
             padding: 0;
         }
 
         nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #000000; 
-    height: 100px; 
-    max-width: 100%; 
-    margin: 0 auto; 
-    padding: 0 20px;
-}
-
-.logo {
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.logo img {
-    height: 100px;
-    padding-left: 20px;
-}
-
-.meni {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 1; /* Da bi zauzimalo preostali prostor */
-}
-
-.meni a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 20px; 
-    margin: 0 10px;
-}
-
-.meni a:last-child {
-    margin-right: 0; 
-}
-
-
-
-
-    nav a:hover {
-        background-color: #dddddd;
-        color: #000000;
-    }
-
-    @media screen and (max-width: 600px) {
-        nav a {
-            float: none;
-            display: block;
-            width: 100%;
-            text-align: left;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: #000000; 
+            height: 100px; 
+            max-width: 100%; 
+            margin: 0 auto; 
+            padding: 0 20px;
         }
-    }
 
-    main {
-        font-family: 'Dokdo', cursive;        
-        max-width: 100%;
-        object-position: bottom;
-        padding: 0px;
-        font-size: 24px; 
-    }
+        .logo {
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
 
-    body {
-        background-color: #dddddd;
-        background-size: cover;
-        margin: 0;
-    }
+        .logo img {
+            height: 100px;
+            padding-left: 20px;
+        }
 
-    footer {
-        position: fixed;
-        bottom: 0;
-        height: 50px;
-        width: 100%;
-        background-color: #000000;
-        font-size: 14px;
-        text-align: center;
-        color: #ffffff;
-        margin-bottom: 0px;
-    }
+        .meni {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-grow: 1; /* Da bi zauzimalo preostali prostor */
+        }
 
-    .datum_i_sat {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-        text-align: right;
-        vertical-align:middle;
-        margin-right: 20px;  
-    }
+        .meni a {
+            color:#ffffff;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 20px; 
+            margin: 0 10px;
+        }
 
-    .red {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 30px;
-        margin-bottom: 30px; 
-        margin-left: 30px ;
-        margin-right: 30px;
-    }
+        .meni a:last-child {
+            margin-right: 0; 
+        }
 
-    .slika_i_naslov {
-        position:relative;
-        text-align: center;
-        width: 30%; 
-        border: 4px solid #000000; 
-        border-radius: 20px; 
-        overflow: hidden; 
-        margin-bottom: 20px; 
-    }
+        nav a:hover {
+            background-color: #dddddd;
+            color: #000000;
+            border-radius: 20px;
+        }
 
-    .slika_i_naslov img {
-        max-width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+        nav a.active {
+            background-color: #ddd;
+            color: #000000;
+            box-shadow: 0px 0px 10px 2px #000000; 
+            border-radius: 20px;
+        }
 
-    .slika_i_naslov h2 {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 24px; 
-        font-weight: bolder ;
-        margin: 0;
-        color: #ffffff; 
-        opacity: 0;
-        position: absolute;
-        bottom: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        transition: opacity 0.3s ease;
-        -webkit-text-stroke-width: 1px; /* Debljina ruba */
-    -webkit-text-stroke-color: rgb(0, 0, 0); /* Boja ruba */
-    }
+        @media screen and (max-width: 600px) {
+            nav a {
+                float: none;
+                display: block;
+                width: 100%;
+                text-align: left;
+            }
+        }
 
-    .slika_i_naslov:hover h2 {
-        opacity: 1;
-    }
-</style>
+        main {
+            font-family: 'Dokdo', cursive;        
+            max-width: 100%;
+            object-position: bottom;
+            padding: 0px;
+            font-size: 24px; 
+        }
+
+        footer {
+            position: fixed;
+            bottom: 0;
+            height: 50px;
+            width: 100%;
+            background-color: #000000;
+            text-align: center;
+            color: #ffffff;
+            margin-bottom: 0px;
+        }
+
+        .datum_i_sat {
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            font-size: 14;
+            text-align: right;
+            vertical-align:middle;
+            margin-right: 20px;  
+        }
+
+        .red {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 30px;
+            margin-bottom: 30px; 
+            margin-left: 30px ;
+            margin-right: 30px;
+        }
+
+        .slika_i_naslov {
+            position:relative;
+            text-align: center;
+            width: 30%; 
+            border: 4px solid #000000; 
+            border-radius: 20px; 
+            overflow: hidden; 
+            margin-bottom: 20px; 
+        }
+
+        .slika_i_naslov img {
+            max-width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .slika_i_naslov h2 {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 24px; 
+            font-weight: bolder ;
+            margin: 0;
+            color: #ffffff; 
+            opacity: 0;
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            transition: opacity 0.3s ease;
+            -webkit-text-stroke-width: 1px; 
+            -webkit-text-stroke-color: #000000;/
+        }
+
+        .slika_i_naslov:hover h2 {
+            opacity: 1;
+        }
+    </style>
+</head>
 
 <body>
     <nav>
         <div class="logo">
-                <img src="slike/logo.png" alt="Logo">
+            <img src="slike/logo.png" alt="Logo">
         </div>
 
         <div class="meni">
-                <a href="dj daniel petric.html">POČETNA</a>
-                <a href="o meni.html">O MENI</a>
-                <a href="usluge.html">USLUGE</a>
-                <a href="kontakt.html" class="active">KONTAKT</a>
-            </div>
+            <a href="dj daniel petric.html">POČETNA</a>
+            <a href="o meni.html">O MENI</a>
+            <a href="usluge.html" class="active">USLUGE</a>
+            <a href="kontakt.html">KONTAKT</a>
+        </div>
     </nav>
 
     <main> 
@@ -226,13 +225,7 @@
         </div>
     </footer>
 
-    <div class="datum_i_sat">
-        <p id="datum_i_sat"></p>
-    </div>
-</footer>
-
-
-<script src="JavaScript/datum_i_sat.js"></script>
+    <script src="JavaScript/datum_i_sat.js"></script>
 
 </body>
 </html>
