--- a/dj daniel petric.html
+++ b/dj daniel petric.html
@@ -4,191 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dj daniel petric.</title>
+    <link rel="stylesheet" type="text/css" href="CSS/pocetna.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-image: url('slike/djbg.jpg');
-            background-size: cover;
-            margin: 0;
-            padding: 0;
-        }
+	
 
-        nav {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: #000000; 
-            height: 100px; 
-            max-width: 100%; 
-            margin: 0 auto; 
-            padding: 0 20px;
-        }
-
-        .logo {
-            height: 100px;
-            padding-left: 20px;
-            margin-right: auto;
-            overflow: hidden;
-        }
-
-        .meni {
-            display: flex;
-            align-items: center;
-            justify-content: center; 
-            margin: 0;
-            padding: 0;
-        }
-
-        .meni a {
-            color: #ffffff;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: bold;
-            padding: 20px; 
-            margin: 0 10px;
-        }
-
-        .drustvene_mreze {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            flex-shrink: 0; 
-            margin: 0;
-            padding: 0;
-        }
-
-        .drustvene_mreze a {
-            margin-right: 15px;
-        }
-
-        .drustvene_mreze a:hover {
-            background-color: transparent; 
-            color: #ffffff;
-        }
-
-        .drustvene_mreze a:hover img {
-            transform: scale(1.1);
-        }
-
-        .drustvene_mreze img {
-            width: 30px; 
-            height: 30px; 
-            border: 2px solid #ffffff; 
-            border-radius: 50%; 
-            padding: 2px;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: #000000;
-            border-radius: 20px;
-        }
-
-        nav a.active {
-            background-color: #ddd;
-            color: #000000;
-            border-radius: 20px;
-            box-shadow: 0px 0px 10px 2px #000000; 
-        }
-
-        @media screen and (max-width: 960px) {
-              nav {
-                height: auto; 
-                flex-direction: column; 
-              }
-
-             .logo {
-                padding-left: 0; 
-                margin-bottom: 10px; 
-              }
-
-              .meni, .drustvene_mreze {
-                width: 100%; 
-                justify-content: center; 
-              }
-
-              .meni a, .drustvene_mreze a {
-                margin: 5px; 
-              }
-
-              .citat {
-                margin: 20px; 
-              }
-
-              footer {
-                position: static; 
-                margin-top: 20px; 
-              }
-
-              .datum_i_sat {
-                position: static; 
-                text-align: center;
-               margin-bottom: 10px;
-              }
-
-        }
-
-        .citat {
-            font-family: 'Dancing Script', cursive;
-            font-size: 30px;
-            padding: 20px;
-            margin: 80px 0 0 50px;
-            color: #000000;
-        }
-
-        .citat p {
-            margin: 0;
-        }
-
-        .bijela_boja {
-            color: #ffffff;
-        }
-
-        footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background-color: #000000;
-            text-align: center;
-            color: #ffffff;
-            margin-bottom: 0;
-        }
-
-        .datum_i_sat {
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            font-size: 14px;
-            text-align: right; 
-            margin-right: 20px;  
-        }
-
-        .copyright {
-            position: fixed;
-            text-align: center;
-            vertical-align: middle;
-            font-size: 14;
-        }
-    </style>
 </head>
 
 <body>
     <nav>
+        <div class="logo">
+            <img src="slike/logo.png" alt="Logo">
+        </div>
         <div class="meni">
-            <img src="slike/logo.png" alt="Logo" class="logo">
             <a href="dj daniel petric.html" class="active" >POČETNA</a>
             <a href="o meni.html" >O MENI</a>
             <a href="usluge.html">USLUGE</a>
             <a href="kontakt.html">KONTAKT</a>
         </div>
         <div class="drustvene_mreze">
-            <a href="https://www.facebook.com/danijel.petric.14?sfnsn=wa" target="_blank"><img src="slike/Facebook logo.png" alt="Facebook" class="drustvene_mreze"></a>
-            <a href="https://www.mixcloud.com/danielpetric/" target="_blank"><img src="slike/MixCloud logo.png" alt="Mixcloud" class="drustvene_mreze"></a>
-            <a href="https://www.instagram.com/djdanielpetric/" target="_blank"><img src="slike/Instagram logo.png" alt="Instagram" class="drustvene_mreze"></a>
-            <a href="https://www.tiktok.com/@djdanielpetric?is_from_webapp=1&sender_device=pc" target="_blank"><img src="slike/tik-tok logo.png" alt="TikTok" class="drustvene_mreze"></a>
-            <a href="https://soundcloud.com/djdanielpetric?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><img src="slike/SoundCloud logo.jpg" alt="SoundCloud" class="drustvene_mreze"></a>
+            <a href="https://www.facebook.com/danijel.petric.14?sfnsn=wa" target="_blank"><img src="slike/Facebook logo.png" alt="Facebook"></a>
+            <a href="https://www.mixcloud.com/danielpetric/" target="_blank"><img src="slike/MixCloud logo.png" alt="Mixcloud"></a>
+            <a href="https://www.instagram.com/djdanielpetric/" target="_blank"><img src="slike/Instagram logo.png" alt="Instagram"></a>
+            <a href="https://www.tiktok.com/@djdanielpetric?is_from_webapp=1&sender_device=pc" target="_blank"><img src="slike/tik-tok logo.png" alt="TikTok"></a>
+            <a href="https://soundcloud.com/djdanielpetric?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><img src="slike/SoundCloud logo.jpg" alt="SoundCloud"></a>
         </div>
     </nav>
 
@@ -199,10 +40,10 @@
     </div>
 
     <footer>
+        <p>&copy; 2024 daniel petric. Sva prava zadržana.</p>
         <div class="datum_i_sat">
             <p id="datum_i_sat"></p>
         </div>
-        <p>&copy; 2024 daniel petric. Sva prava zadržana.</p>
     </footer>
 
     <script src="JavaScript/datum_i_sat.js"></script>
