--- a/o meni.html
+++ b/o meni.html
@@ -4,169 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>o meni</title>
+	<link rel="stylesheet" type="text/css" href="CSS/o meni.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Dokdo&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-image: url('slike/o\ meni\ pozadina.jpg');
-            background-repeat: repeat;
-            background-position: center top; 
-            margin: 0;
-            padding: 0;
-        }
-
-        nav {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: #000000; 
-            height: 100px; 
-            max-width: 100%; 
-            margin: 0 auto; 
-            padding: 0 20px;
-        }
-
-        .logo {
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-        .logo img {
-            height: 100px;
-            padding-left: 20px;
-        }
-
-        .meni {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-grow: 1; 
-        }
-
-        .meni a {
-            color: #ffffff;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: bold;
-            padding: 20px; 
-            margin: 0 10px;
-        }
-
-        .meni a:last-child {
-            margin-right: 0; 
-        }
-
-        nav a.active {
-            background-color: #ddd;
-            color: #000000;
-            box-shadow: 0px 0px 10px 2px #000000; 
-            border-radius: 20px;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: #000000;
-            border-radius: 20px;
-        }
-
-        @media screen and (max-width: 960px) {
-              nav {
-                height: auto; 
-                flex-direction: column; 
-              }
-
-             .logo {
-                padding-left: 0; 
-                margin-bottom: 10px; 
-              }
-
-              .meni, .drustvene_mreze {
-                width: 100%; 
-                justify-content: center; 
-              }
-
-              .meni a, .drustvene_mreze a {
-                margin: 5px; 
-              }
-
-              .citat {
-                margin: 20px; 
-              }
-
-              footer {
-                position: static; 
-                margin-top: 20px; 
-              }
-
-              .datum_i_sat {
-                position: static; 
-                text-align: center;
-               margin-bottom: 10px;
-              }
-
-        }
-
-
-        main {
-            font-family: 'Protest Guerrilla', cursive;    
-            color: #3e4f6e;    
-            max-width: 100%;
-            object-position:center;
-            padding: 0px;
-            font-size: 24px; 
-        }
-
-        footer {
-            position: fixed;
-            bottom: 0;
-            height: 50px;
-            width: 100%;
-            background-color: #000000;
-            text-align: center;
-            color: #ffffff;
-            margin-bottom: 0px;
-        }
-
-        .datum_i_sat {
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            text-align: right;
-            vertical-align:middle;
-            margin-right: 20px;  
-        }
-
-        .tekst_o_meni {
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-            margin-bottom: 30px;
-            text-align: justify;
-            -webkit-text-stroke-width: 1px; 
-            -webkit-text-stroke-color: #ffffff; 
-        }
-
-        .tekst_o_meni a[target="_blank"] {
-            color: #800080; /* Crvena boja linka */
-        }
-
-        .tekst_o_meni a[target="_blank"]:hover {
-            color: #0000ff; /* Plava boja linka kada se pređe mišem preko njega */
-        }
-
-        .profilna_slika {
-            text-align: center;
-        }   
-
-        .profilna_slika img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-bottom: 20px;
-        }
-    </style>
+  
 </head>
 <body>
     <nav>
